# difflens

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Pipfile  README.md  common_utils.py  compare_files.py  compute_diffs.py  hash_file_io.py  log_helper.py  requirements.txt  run.py  runDiffLens.sh  runWeeklyDiff.sh  setup.cfg  setup.py
diff-lens/: compare_files.py  compute_diffs.py  hash_file_reader.py  hash_file_writer.py  hash_writer.py  traversal.py
difflens/: __main__.py  difflens.py  entry.py  run.py
difflens/util/: compareMode.py  comparefiles.py  compute_diffs.py  computediffs.py  hash_file_io.py  hashfileio.py  pathExcluder.py
src/diff_lens/: common_utils.py  compare_files.py  compute_diffs.py  hash_file_io.py  run.py
