[metadata]
# From https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
name = diff-lens-kubedzero
version = 0.0.1
author = KZ
author_email = kubedzero@gmail.com
description = A package to compute file hashes and find differences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kubedzero/diff-lens
project_urls =
    Bug Tracker = https://github.com/kubedzero/diff-lens/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src