[metadata]
name = difflens-kubedzero
version = 0.1
author = KZ
author_email = kubedzero@gmail.com
description = A package to compute, export, and analyze BLAKE3 file hashes and directory structures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kubedzero/difflens
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Environment :: Console
    Operating System :: OS Independent